--- a/MM Systems/PanoramaApp3/PanoramaApp3/MainPage.xaml
+++ b/MM Systems/PanoramaApp3/PanoramaApp3/MainPage.xaml
@@ -32,9 +32,9 @@
                             <StackPanel Margin="0,0,0,17" Width="432">
                                 <Button Content="Nieuwe invoer" Margin="12,-14,12,0" Click="ButtonBase_OnClick"/>
                                 <TextBlock Text="Nieuwe data ingeven van een activiteit" TextWrapping="Wrap" Margin="25,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
-                                <Button Content="Grafieken" Margin="12,-14,12,0" />
+                                <Button Content="Grafieken" Margin="12,-14,12,0" Click="Button_Click_2" />
                                 <TextBlock Text="Grafieken van vorige data bekijken" TextWrapping="Wrap" Margin="25,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
-                                <Button Content="Instellingen" Margin="12,-14,12,0" />
+                                <Button Content="Instellingen" Margin="12,-14,12,0" Click="Button_Click_1" />
                                 <TextBlock Text="Log je uit of verander andere instellingen" TextWrapping="Wrap" Margin="25,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
                             </StackPanel>
                 </ListBox>
@@ -49,7 +49,11 @@
                                 <!--Replace rectangle with image-->
                                 <StackPanel Width="311">
                             <toolkit:DatePicker ValueStringFormat="{}{0:dd-MM-yyyy}"></toolkit:DatePicker>
-                            <toolkit:TimePicker ValueStringFormat="{}{0:HH:mm}"></toolkit:TimePicker>
+                                    <StackPanel Orientation="Horizontal">
+                                <toolkit:TimePicker ValueStringFormat="{}{0:HH}"></toolkit:TimePicker>
+                                        <TextBlock Margin="0,20,0,0" TextAlignment="Center">tot</TextBlock>
+                                <toolkit:TimePicker ValueStringFormat="{}{0:HH}"></toolkit:TimePicker>
+                            </StackPanel>
                                     <Button Content="Oke" Click="Button_Click"></Button>
                                 </StackPanel>
                             </StackPanel>
@@ -59,21 +63,27 @@
                 <!--Double line list with image placeholder and text wrapping-->
                 <ListBox Margin="0,0,-12,0" >
                             <StackPanel Orientation="Vertical" Width="430" Margin="0,0,0,17">
-                                <toolkit:MultiselectList>
-                                    <toolkit:ListPicker>
+                                <TextBlock TextAlignment="Center">Activiteit</TextBlock>    
+                                <toolkit:ListPicker>
                                         <toolkit:ListPickerItem>test1</toolkit:ListPickerItem>
                                 <toolkit:ListPickerItem>test2</toolkit:ListPickerItem>
                                 <toolkit:ListPickerItem>test3</toolkit:ListPickerItem>
                                 <toolkit:ListPickerItem>test4</toolkit:ListPickerItem>
                             </toolkit:ListPicker>
-                                </toolkit:MultiselectList>
-                                <StackPanel Orientation="Horizontal" >
+                        <TextBlock TextAlignment="Center">Moeheid</TextBlock>
+                        <StackPanel Orientation="Horizontal" >
                         <Slider x:Name="SliderVermoeidheid" Width="400" Minimum="0" Maximum ="10"></Slider>
                         <TextBlock Text="{Binding ElementName=SliderVermoeidheid,Path=Value}"></TextBlock>
                         </StackPanel>
-                                <StackPanel Orientation="Horizontal" >
+                        <TextBlock TextAlignment="Center">Belangrijkheid</TextBlock>
+                        <StackPanel Orientation="Horizontal" >
                             <Slider x:Name="SliderBelangrijk" Width="400" Minimum="0" Maximum ="10"></Slider>
                         <TextBlock Text="{Binding ElementName=SliderBelangrijk,Path=Value}"></TextBlock>
+                        </StackPanel>
+                        <TextBlock TextAlignment="Center">Tevredenheid</TextBlock>
+                        <StackPanel Orientation="Horizontal" >
+                            <Slider x:Name="SliderTevredenheid" Width="400" Minimum="0" Maximum ="10"></Slider>
+                            <TextBlock Text="{Binding ElementName=SliderTevredenheid,Path=Value}"></TextBlock>
                         </StackPanel>
                     </StackPanel>
                 </ListBox>
