Login fixed to early version. (van u ding dus), test with Username = brentproost, Password = test123

--- a/MM Systems/PanoramaApp3/PanoramaApp3/Pages/LoginUserControl.xaml
+++ b/MM Systems/PanoramaApp3/PanoramaApp3/Pages/LoginUserControl.xaml
@@ -7,7 +7,7 @@
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
-    d:DesignHeight="480" d:DesignWidth="480">
+    d:DesignHeight="480" d:DesignWidth="500">
 
     <Grid x:Name="LayoutRoot" Background="Black">
         <Grid.RowDefinitions>
@@ -21,10 +21,11 @@
             <Grid Margin="9,0,0,10" HorizontalAlignment="Left">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" MinWidth="63"/>
-                    <ColumnDefinition Width="Auto" MinWidth="396"/>
+                    <ColumnDefinition Width="144"/>
+                    <ColumnDefinition Width="252"/>
                 </Grid.ColumnDefinitions>
-                <TextBlock x:Name="PageTitle" Text="login" Margin="0" Style="{StaticResource PhoneTextTitle1Style}" VerticalAlignment="Top" Grid.Column="1" HorizontalAlignment="Left"/>
-                <Image x:Name="image1" Stretch="Fill" UseLayoutRounding="True" Margin="0,5,0,0" Source="/login;component/TempImage100.jpg" Width="60" Height="60" HorizontalAlignment="Left" />
+                <TextBlock x:Name="PageTitle" Text="login" Margin="0" Style="{StaticResource PhoneTextTitle1Style}" VerticalAlignment="Top" Grid.Column="1" HorizontalAlignment="Left" Grid.ColumnSpan="2"/>
+                <Image x:Name="image1" Stretch="Fill" UseLayoutRounding="True" Margin="0,21,0,15" Source="/login;component/TempImage100.jpg" Width="60" Height="60" HorizontalAlignment="Left" />
             </Grid>
         </StackPanel>
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="7,-20,7,0" >
@@ -35,17 +36,12 @@
 
             <TextBlock Margin="10,10,10,51" Text="Welcome to The Greatest App Ever. Please login below." TextWrapping="Wrap"/>
             <StackPanel HorizontalAlignment="Center"  VerticalAlignment="Top" Margin="10,69,26,0" Width="430" Grid.RowSpan="2">
-                <StackPanel HorizontalAlignment="Center" Margin="15,0" 
-            		VerticalAlignment="Top">
+                <StackPanel >
                     <TextBlock x:Name="lblUsername" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Username:" VerticalAlignment="Center"/>
-                    <TextBox x:Name="txtUsername" Margin="0" 
-            			Text="{Binding Username, Mode=TwoWay}"
-            			VerticalAlignment="Center" Width="402" HorizontalAlignment="Left"/>
+                    <TextBox x:Name="txtGebruikersNaam"/>
                     <TextBlock x:Name="lblPassword" HorizontalAlignment="Left" Margin="0" TextWrapping="Wrap" Text="Password:" VerticalAlignment="Center"/>
-                    <PasswordBox  x:Name="txtPassword" HorizontalAlignment="Left" 
-            			Password="{Binding Password, Mode=TwoWay}"
-            			VerticalAlignment="Center" Margin="0" Width="402"/>
-                    <Button x:Name="btn_Login" Content="Login"/>
+                    <PasswordBox  x:Name="txtPaswoord"/>
+                    <Button x:Name="btn_Login" Content="Login" Click="btn_Login_Click"/>
                 </StackPanel>
             </StackPanel>
         </Grid>
