--- a/MM Systems/PanoramaApp3/PanoramaApp3/Pages/Settings.xaml
+++ b/MM Systems/PanoramaApp3/PanoramaApp3/Pages/Settings.xaml
@@ -32,16 +32,8 @@
                 <Grid.RowDefinitions>
                     <RowDefinition></RowDefinition>
                     <RowDefinition></RowDefinition>
-                </Grid.RowDefinitions>
-                <StackPanel Grid.Row="0" VerticalAlignment="Center">
-                    <TextBlock FontSize="15" Text="Testgegevens:  Gebruikersnaam = brentproost; paswoord = test123"></TextBlock>
-                    <TextBlock Text="Gebruikersnaam"></TextBlock>
-                    <TextBox x:Name="txtGebruikersNaam"></TextBox>
-                    <TextBlock  Text="Paswoord"></TextBlock>
-                    <TextBox x:Name="txtPaswoord"></TextBox>
-                </StackPanel>
-               
-            <Button x:Name="btnLogin" Grid.Row="1" Content="Login" Height="72" HorizontalAlignment="Center" VerticalAlignment="Top" Width="200" Click="btnLogin_Click" />
+                </Grid.RowDefinitions>            
+            <Button x:Name="Button" Grid.Row="1" Content="Login" Height="72" HorizontalAlignment="Center" VerticalAlignment="Top" Width="200" Click="Button_Click" />
             </Grid>
             
         </Grid>
