Removed login button used old login page instead. Pages edited: -Settings.xaml.cs -LoginUserControl.xaml.cs -LoginUserControl.xaml

--- a/MM Systems/PanoramaApp3/PanoramaApp3/Pages/LoginUserControl.xaml
+++ b/MM Systems/PanoramaApp3/PanoramaApp3/Pages/LoginUserControl.xaml
@@ -34,14 +34,14 @@
                 <RowDefinition Height="519*" />
             </Grid.RowDefinitions>
 
-            <TextBlock Margin="10,10,10,51" Text="Welcome to The Greatest App Ever. Please login below." TextWrapping="Wrap"/>
-            <StackPanel HorizontalAlignment="Center"  VerticalAlignment="Top" Margin="10,69,26,0" Width="430" Grid.RowSpan="2">
+            <TextBlock Margin="0,10,10,51" Text="Welcome to The Greatest App Ever. Please login below." TextWrapping="Wrap"/>
+            <StackPanel HorizontalAlignment="Center"  VerticalAlignment="Top" Margin="0,69,26,0" Width="430" Grid.RowSpan="2">
                 <StackPanel >
                     <TextBlock x:Name="lblUsername" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Username:" VerticalAlignment="Center"/>
-                    <TextBox x:Name="txtGebruikersNaam"/>
+                    <TextBox x:Name="txtUsername" Text="{Binding Username, Mode=TwoWay}"/>
                     <TextBlock x:Name="lblPassword" HorizontalAlignment="Left" Margin="0" TextWrapping="Wrap" Text="Password:" VerticalAlignment="Center"/>
-                    <PasswordBox  x:Name="txtPaswoord"/>
-                    <Button x:Name="btn_Login" Content="Login" Click="btn_Login_Click"/>
+                    <PasswordBox  x:Name="txtPassword" Password="{Binding Password, Mode=TwoWay}"/>
+                    <!--<Button x:Name="btn_Login" Content="Login" Click="btn_Login_Click"/>-->
                 </StackPanel>
             </StackPanel>
         </Grid>
