--- a/MM Systems/PanoramaApp3/PanoramaApp3/Pages/Settings.xaml
+++ b/MM Systems/PanoramaApp3/PanoramaApp3/Pages/Settings.xaml
@@ -27,13 +27,14 @@
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
-        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
+        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="0,0,0,0">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition></RowDefinition>
                     <RowDefinition></RowDefinition>
                 </Grid.RowDefinitions>            
-            <Button x:Name="Button" Grid.Row="1" Content="Login" Height="72" HorizontalAlignment="Center" VerticalAlignment="Top" Width="200" Click="Button_Click" />
+            <Button x:Name="Login" Grid.Row="0" Content="Login" Height="72" HorizontalAlignment="Center" VerticalAlignment="Top" Width="200" Click="Button_Click" />
+            <Button x:Name="Logoff" Grid.Row="1" Content="Log Out" Height="72" HorizontalAlignment="Center" VerticalAlignment="Top" Width="200" Click="Logoff_OnClick" />
             </Grid>
             
         </Grid>
