--- a/MM Systems/PanoramaApp3/PanoramaApp3/MainPage.xaml
+++ b/MM Systems/PanoramaApp3/PanoramaApp3/MainPage.xaml
@@ -59,8 +59,10 @@
                         <StackPanel Width="311">
                             <toolkit:DatePicker ValueStringFormat="{}{0:dd-MM-yyyy}"></toolkit:DatePicker>
                             <StackPanel Orientation="Horizontal">
-                                <toolkit:TimePicker ValueStringFormat="{}{0:HH}"></toolkit:TimePicker>
-                                <TextBlock Margin="0,20,0,0" TextAlignment="Center">tot</TextBlock>
+                                <TextBox Text="0">
+                                    
+                                </TextBox>
+                                    <TextBlock Margin="0,20,0,0" TextAlignment="Center">tot</TextBlock>
                                 <toolkit:TimePicker ValueStringFormat="{}{0:HH}"></toolkit:TimePicker>
                             </StackPanel>
                             <Button Content="Oke" Click="Button_Click"></Button>
@@ -68,10 +70,10 @@
                     </StackPanel>
                 </ListBox>
             </controls:PanoramaItem>
-            <controls:PanoramaItem x:Name="item3" Header="Third item">
+            <controls:PanoramaItem x:Name="item3">
                 <!--Double line list with image placeholder and text wrapping-->
                 <ListBox Margin="0,0,-12,0" >
-                    <StackPanel Orientation="Vertical" Width="430" Margin="0,0,0,17">
+                    <StackPanel Orientation="Vertical" Width="400" Margin="0,0,0,17">
                         <TextBlock TextAlignment="Center">Activiteit</TextBlock>
                         <toolkit:ListPicker ItemTemplate="{StaticResource ActivitiesTemplate}" x:Name="lp_Activiteiten"></toolkit:ListPicker>
                         <TextBlock TextAlignment="Center">Moeheid</TextBlock>
@@ -88,6 +90,9 @@
                         <StackPanel Orientation="Horizontal" >
                             <Slider x:Name="SliderTevredenheid" Width="400" Minimum="0" Maximum ="10"></Slider>
                             <TextBlock Text="{Binding ElementName=SliderTevredenheid,Path=Value}"></TextBlock>
+                        </StackPanel>
+                        <StackPanel>
+                            <Button Content="OK" Click="Button_Click_3"></Button>
                         </StackPanel>
                     </StackPanel>
                 </ListBox>
