--- a/MM Systems/WebApp/WebApp/DialogBoxes/AddActivity.xaml
+++ b/MM Systems/WebApp/WebApp/DialogBoxes/AddActivity.xaml
@@ -2,7 +2,7 @@
            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
            xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls"
-           Width="300" Height="100" 
+           Width="300" Height="150" 
            Title="AddActivity">
     <Grid x:Name="LayoutRoot" Margin="2">
         <Grid.RowDefinitions>
@@ -16,11 +16,17 @@
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
         </Grid>
-        <StackPanel Grid.Column="0" Orientation="Vertical">
-            <TextBlock Margin="4" Text="Omschrijving"></TextBlock>
+        <StackPanel>
+        <StackPanel Orientation="Horizontal">
+                <TextBlock Text="Categorie" Margin="0,0,35,0"></TextBlock>
+                <ComboBox ItemsSource="{Binding}" Name="cb_Categorie" Margin="0"></ComboBox>
         </StackPanel>
-        <StackPanel Grid.Column="1" Orientation="Vertical">
-            <TextBox Margin="2" x:Name="txtOmschr" Width="100"></TextBox>
+        
+        <StackPanel Grid.Column="0" Orientation="Horizontal">
+            <TextBlock Margin="4" Text="Omschrijving"></TextBlock>
+                <TextBox Margin="2" x:Name="txtOmschr" Width="100"></TextBox>
+
+            </StackPanel>
         </StackPanel>
         <Button x:Name="CancelButton" Content="Cancel" Click="CancelButton_Click" Width="75" Height="23" HorizontalAlignment="Right" Margin="0,12,0,0" Grid.Row="1" />
         <Button x:Name="OKButton" Content="OK" Click="OKButton_Click" Width="75" Height="23" HorizontalAlignment="Right" Margin="0,12,79,0" Grid.Row="1" />
